Upload report artifacts  #687 (#688)
* preparing for release

* Upload report artifact initial test #687

* Upload report artifact test #687

* Upload report artifact test #687

* Upload report artifact test #687

* Upload report artifact test #687

* Upload report artifact test #687

* Upload report artifact test #687

* Upload report artifact test #687

* Upload report artifact test #687

* Upload report artifact test #687

* Upload report artifact test #687

* Upload report artifact test #687

* Upload report artifact test #687

* Upload report artifact test #687

* Upload report artifact test #687

* muting all pipelines to focus

* fixing some pom.xml conflicts

* enable debugMode for generateAllureReportArchive

* attempting fix for os.matrix issue

* adding extra logs for archiving mechanism

* added extra logging to check directories

* replaced double with single quotes for unix

* fixing issue with overriding archive name

* removing quotes from generate allure command

* disabling extra logs for generateAllureReportArchive

* re-enabling main pipelines

Co-authored-by: Mohab Mohie <Mohab.MohieElDeen@outlook.com>